# foodguard

./: .env.example  .gitignore  CLAUDE.md  README.md  config.py  pyproject.toml  requirements.txt
app/: app.py  server.py
app/static/: app.js  index.html  style.css
data/: user_profile.json
data/processed/: additives_knowledge.json  allergens.json
data/raw/: gb2760_additives.json  manual_annotations.json
scripts/: build_vectorstore.py  crawl_gb2760.py  gen_doc.py  process_data.py
src/agents/: graph.py  router.py  tools.py
src/chains/: allergy_chain.py  base.py  compare_chain.py  interpret_chain.py  risk_chain.py
src/data/: loader.py  splitter.py  vectorstore.py
src/memory/: user_profile.py
src/models/: embeddings.py  llm.py  schemas.py
src/ocr/: paddle_ocr.py
src/prompts/: allergy_check.md  compare.md  interpret.md  risk_label.md
tests/: test_chains.py
