[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "foodguard"
version = "0.1.0"
description = "食鉴 — 食品配料智能分析 Agent (RAG + LangGraph)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-ollama>=0.3.0",
    "langgraph>=0.2.0",
    "chromadb>=0.5.0",
    "langchain-chroma>=0.2.0",
    "sentence-transformers>=3.0.0",
    "huggingface-hub>=0.20.0",
    "streamlit>=1.30.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "modelscope>=1.20.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "lxml>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]

[tool.setuptools.packages.find]
include = ["src*", "app*", "config*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
